Fixed controls on mobile being stuck to the top

--- a/less/stylesheets/sections/mobile.less
+++ b/less/stylesheets/sections/mobile.less
@@ -18,6 +18,7 @@
     width: 100%;
     height: 10vh;
     bottom: 0;
+    top: initial;
     z-index: 100;
     background: @background-dark;
     position: fixed;
